--- a/index.html
+++ b/index.html
@@ -13,19 +13,31 @@
 
 	<!-- <div id="dropZone"></div> -->
 
-	<img src="images/boombox.svg" id="dropZone">
+	<img src="images/record_player.svg" id="dropZone">
 
 	
-	<div id="musicTapes">
-		<img src="images/Chainsmokers.svg" id="audioOne" draggable>
+	<div id="musicGuitar">
+		<img src="images/guitar_record.svg" id="audioOne" draggable>
 
-		<img src="images/Coldplay.svg" id="audioTwo" draggable>
+		<img src="images/guitar2.svg" id="audioTwo" draggable>
 
-		<img src="images/We are Leo.svg" id="audioThree" draggable>
+		<img src="images/guitar3.svg" id="audioThree" draggable>
+	</div>
 
-		<img src="images/Breaking Benjamin.svg" id="audioFour" draggable>
+	<div id="musicDrum">
+		<img src="images/drums_record.svg" id="audioFour" draggable>
 
-		<img src="images/Ed Sheeran.svg" id="audioFive" draggable>
+		<img src="images/drums2.svg" id="audioFive" draggable>
+
+		<img src="images/drums3.svg" id="audioSix" draggable>
+	</div>
+
+	<div id="musicBass">
+		<img src="images/bass.svg" id="audioSeven" draggable>
+
+		<img src="images/bass2.svg" id="audioEight" draggable>
+
+		<img src="images/bass3.svg" id="audioNine" draggable>
 	</div>
 
 	<button id="resetButton">Reset Music</button>
